--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@arcana/auth": "^0.0.8",
+    "@arcana/storage": "https://github.com/arcana-network/storage",
     "@mantine/core": "^3.6.14",
     "@mantine/hooks": "^3.6.14",
     "@walletconnect/web3-provider": "^1.7.4",
     "ethers": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "6",
     "react-scripts": "^4.0.3",
     "web3modal": "^1.9.5"
   },
