--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "dependencies": {
     "@arcana/auth": "^0.0.8",
     "@arcana/storage": "https://github.com/arcana-network/storage",
-    "@mantine/core": "^3.6.14",
-    "@mantine/hooks": "^3.6.14",
+    "@mantine/core": "^4.0.0",
+    "@mantine/dropzone": "^4.0.0",
+    "@mantine/hooks": "^4.0.0",
     "@walletconnect/web3-provider": "^1.7.4",
     "ethers": "^5.5.4",
     "react": "^17.0.2",
