--- a/package.json
+++ b/package.json
@@ -8,13 +8,11 @@
     "@mantine/core": "^4.0.0",
     "@mantine/dropzone": "^4.0.0",
     "@mantine/hooks": "^4.0.0",
-    "@walletconnect/web3-provider": "^1.7.4",
     "ethers": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "6",
-    "react-scripts": "^4.0.3",
-    "web3modal": "^1.9.5"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
