--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "@mantine/core": "^4.0.0",
     "@mantine/dropzone": "^4.0.0",
     "@mantine/hooks": "^4.0.0",
+    "@reduxjs/toolkit": "^1.8.0",
     "ethers": "^5.5.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "^4.0.3"
   },
