--- a/package.json
+++ b/package.json
@@ -8,19 +8,19 @@
     "@mantine/core": "^4.0.0",
     "@mantine/dropzone": "^4.0.0",
     "@mantine/hooks": "^4.0.0",
-    "@reduxjs/toolkit": "^1.8.0",
     "@superfluid-finance/sdk-core": "^0.3.0",
     "ethers": "^5.5.4",
+    "mobx": "^6.5.0",
+    "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.6",
     "react-router-dom": "6",
     "react-scripts": "^4.0.3"
   },
   "resolutions": {
     "//": "See https://github.com/facebook/create-react-app/issues/11773",
     "react-error-overlay": "6.0.9"
-  },  
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
