--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mantine/hooks": "^4.0.0",
     "@superfluid-finance/sdk-core": "^0.3.0",
     "ethers": "^5.5.4",
+    "graphql": "^16.3.0",
     "mobx": "^6.5.0",
     "mobx-react-lite": "^3.3.0",
     "react": "^17.0.2",
