--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ REACT_APP_RPC_URL=<rpc-url>
 REACT_APP_BLOCK_EXPLORER_URL=https://mumbai.polygonscan.com
 REACT_APP_AEGIS_ADDRESS=0xF42a31EB6940B58534925A335428B7DAC9DAc035
 REACT_APP_SUPERFLUID_FLOW_RATE=385802469135
-REACT_APP_OPENSEA_BASE_URL=https://testnets.opensea.io/assets/mumbai/
+REACT_APP_RARIBLE_BASE_URL=https://rinkeby.rarible.com/token/polygon/
