--- a/.env.example
+++ b/.env.example
@@ -8,4 +8,5 @@ REACT_APP_BLOCK_EXPLORER_URL=https://mumbai.polygonscan.com
 REACT_APP_AEGIS_ADDRESS=0xF42a31EB6940B58534925A335428B7DAC9DAc035
 REACT_APP_SUPERFLUID_FLOW_RATE=385802469135
 REACT_APP_RARIBLE_BASE_URL=https://rinkeby.rarible.com/token/polygon/
-
+REACT_APP_WEB3_STORAGE_TOKEN=<web3-storage-token>
+REACT_APP_IPFS_GATEWAY_URL=https://dweb.link
