--- a/.env.example
+++ b/.env.example
@@ -10,5 +10,5 @@ REACT_APP_SUPERFLUID_FLOW_RATE=385802469135
 REACT_APP_RARIBLE_BASE_URL=https://rinkeby.rarible.com/token/polygon/
 REACT_APP_WEB3_STORAGE_TOKEN=<web3-storage-token>
 REACT_APP_IPFS_GATEWAY_URL=https://dweb.link
-REACT_APP_GRAPH_API_URL=https://api.studio.thegraph.com/query//aegis-subgraph-mumbai/
+REACT_APP_GRAPH_API_URL=https://api.thegraph.com/subgraphs/name/0xaegis/aegis-subgraph-mumbai
 GENERATE_SOURCEMAP=false
